--- a/style/style.css
+++ b/style/style.css
@@ -206,7 +206,15 @@ body {
     padding: .5rem 1rem;
     border-radius: 1rem;
     border: none;
+    border: 2px solid rgba(0, 0, 0, .5);
+    background-color: #BEE4F4;
+    transition: .3s ease;
     cursor: pointer;
+}
+#input-confirm:hover,
+#input-cancel:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 2rem .3rem #87CEEB;
 }
 
 #input-background.close {
