--- a/style/style.css
+++ b/style/style.css
@@ -193,7 +193,54 @@ body {
 
 .true-false {
     display: flex;
-    gap: 1rem;
+    justify-self: start;
+    border: 2px solid rgba(0, 0, 0, .1);
+    border-radius: 1rem;
+    transition: .3s ease;
+}
+
+.true-false label {
+    padding: .5rem 1rem;
+    cursor: pointer;
+    font-weight: bold;
+    transition: ease .3s;
+}
+
+#true,
+#false {
+    display: none;
+}
+
+.true-false label:has(input[id="true"]) {
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.true-false label:has(input[id="false"]) {
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+
+.true-false label:first-child {
+    border-right: 1px solid gray;
+}
+
+.true-false label:has(input[id="true"]:checked) {
+    background-color: #D0F0C0;
+    color: #2C6B2F;
+}
+
+.true-false label:has(input[id="false"]:checked) {
+    background-color: #F6B1B1;
+    color: #B71C1C;
+}
+
+.true-false:has(input[id="true"]:checked) {
+    border: 2px solid #90EE90;
+}
+
+.true-false:has(input[id="false"]:checked) {
+    border: 2px solid #FF6C71;
 }
 
 .submit-cancel {
@@ -211,10 +258,16 @@ body {
     transition: .3s ease;
     cursor: pointer;
 }
+
 #input-confirm:hover,
-#input-cancel:hover{
+#input-cancel:hover {
     transform: scale(1.1);
     box-shadow: 0 0 2rem .3rem #87CEEB;
+}
+
+#input-confirm:active,
+#input-cancel:active {
+    transform: scale(1.05);
 }
 
 #input-background.close {
@@ -286,15 +339,18 @@ body {
 }
 
 @keyframes popIn {
-    from{
+    from {
         opacity: 0;
         transform: scale(0);
     }
-    50%{
+
+    50% {
         transform: scale(1.05);
     }
-    to{
+
+    to {
         opacity: 1;
-        transform: scale(1);;
+        transform: scale(1);
+        ;
     }
 }
