--- a/style/style.css
+++ b/style/style.css
@@ -61,8 +61,8 @@ body {
 #right {
     padding: 1rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: minmax(250px, max-content);
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-auto-rows: 250px;
     gap: 2rem;
     overflow: auto;
     position: relative;
@@ -88,7 +88,7 @@ body {
     display: grid;
     grid-template-rows: repeat(5, 1fr);
     border-radius: 1rem;
-    justify-content: start;
+    justify-items: start;
     align-items: start;
     border: .2rem solid rgba(255, 255, 255, .5);
     border-left: 2rem solid skyblue;
@@ -99,6 +99,7 @@ body {
 .bookControl {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-self: stretch;
     gap: 1rem;
 }
 
